Project is frozen due to lack VebWiew for Tizen TV... TODO: embed browser into app

--- a/.gitignore
+++ b/.gitignore
@@ -340,3 +340,4 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 /TizenXamlApp1/TizenXamlApp1.TV/res/client_secrets.json
+/App4/App4/Services/GoogleAuthorize.cs
